fix: gap in sidebar

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,12 @@
-.brdr{
-    border-top: 2px solid rgba(242, 242, 242, 0.435);
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+.font-robo {
+  font-family: "Roboto", sans-serif;
 }
-.activeclassname{
-    background: #363636;
+
+.brdr {
+  border-top: 2px solid rgba(242, 242, 242, 0.435);
+}
+.activeclassname {
+  background: #363636;
 }
